auto-download hdf5 files